--- a/index.html
+++ b/index.html
@@ -6,12 +6,34 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="CSS/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
 <body>
-    <div class="container">
-        <div class="navbar">
+    <div class="container" id="cont">
+
+
+        <div class="menu" id="menu">
+            <button id="close-menu"><i class="fa-solid fa-xmark"></i></button>
+            <ul>
+                <li class="active"><a href="#">Home</a></li>
+                <li><a href="#">Trending</a></li>
+                <li><a href="#">Popular</a></li>
+                <li><a href="#">Anticipated</a></li>
+                <li><a href="#">Library</a></li>
+            </ul>
+        </div>
+
+        <div class="search-container" id="search-container">
+            <button id="close-search"><i class="fa-solid fa-xmark"></i></button>
+            <input type="text" placeholder="Enter Your Text Here...">
+            <button><i class="fa-solid fa-magnifying-glass"></i></button>
+        </div>
+
+        <div class="navbar" id="nav">
+            <button id="open-menu"><i class="fa-solid fa-bars"></i></button>
             <h1>MoviesHUB</h1>
+            <button id="open-search"><i class="fa-solid fa-magnifying-glass"></i></button>
         </div>
         <div class="banner">
             <div class="banner-cover">
@@ -30,43 +52,15 @@
             </div>
         </div>
         <div class="section-cont">
-            <div class="box">
-                <div class="trending-section">
-                </div>
-            </div>
             <div class="section">
-                <h2>Popular</h2>
+                <h2>Popular Now</h2>
                 <div class="slider" id="popular-container"></div>
             </div>
         </div>
         <div class="section-cont">
-            <div class="box">
-                <div class="trending-section">
-                </div>
-            </div>
             <div class="section">
-                <h2>Anticipated</h2>
+                <h2>Most Anticipated</h2>
                 <div class="slider" id="anticipated"></div>
-            </div>
-        </div>
-        <div class="section-cont">
-            <div class="box">
-                <div class="trending-section">
-                </div>
-            </div>
-            <div class="section">
-                <h2>Upcoming</h2>
-                <div class="slider"></div>
-            </div>
-        </div>
-        <div class="section-cont">
-            <div class="box">
-                <div class="trending-section">
-                </div>
-            </div>
-            <div class="section">
-                <h2>Library</h2>
-                <div class="slider"></div>
             </div>
         </div>
     </div>
