--- a/index.html
+++ b/index.html
@@ -6,21 +6,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="CSS/style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
+        integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
 <body>
     <div class="container" id="cont">
-
-
         <div class="menu" id="menu">
             <button id="close-menu"><i class="fa-solid fa-xmark"></i></button>
             <ul>
                 <li class="active"><a href="#">Home</a></li>
-                <li><a href="#">Trending</a></li>
+                <li><a href="trending.html">Trending</a></li>
                 <li><a href="#">Popular</a></li>
                 <li><a href="#">Anticipated</a></li>
-                <li><a href="#">Library</a></li>
+                <li><a href="library.html">Library</a></li>
             </ul>
         </div>
 
