--- a/library.html
+++ b/library.html
@@ -1,17 +1,48 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>MoviesHUB - Home</title>
-    <link rel="shortcut icon" href="Images/favicon.png" type="image/x-icon">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-  </head>
-  <body>
-    <a class="m-5" href="index.html">Home</a>
-    <input id="title" class="m-5" type="text">
-    <button id="submit-btn" class="m-5">Search</button>
-    <script src="JS/index.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-  </body>
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="CSS/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
+        integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+</head>
+
+<body>
+    <div class="container" id="cont">
+        <div class="menu" id="menu">
+            <button id="close-menu"><i class="fa-solid fa-xmark"></i></button>
+            <ul>
+                <li class="active"><a href="index.html">Home</a></li>
+                <li><a href="trending.html">Trending</a></li>
+                <li><a href="#">Popular</a></li>
+                <li><a href="#">Anticipated</a></li>
+                <li><a href="library.html">Library</a></li>
+            </ul>
+        </div>
+
+        <div class="search-container" id="search-container">
+            <button id="close-search"><i class="fa-solid fa-xmark"></i></button>
+            <input type="text" placeholder="Enter Your Text Here...">
+            <button><i class="fa-solid fa-magnifying-glass"></i></button>
+        </div>
+
+        <div class="navbar" id="nav">
+            <button id="open-menu"><i class="fa-solid fa-bars"></i></button>
+            <h1>MoviesHUB</h1>
+            <button id="open-search"><i class="fa-solid fa-magnifying-glass"></i></button>
+        </div>
+
+        <div class="library-container">
+          <div class="card">
+            <img src="" alt="">
+          </div>
+        </div>
+    </div>
+    <script src="JS/lib.js"></script>
+</body>
+
 </html>
