--- a/index.html
+++ b/index.html
@@ -24,42 +24,30 @@
                 <li><a href="library.html">Library</a></li>
             </ul>
         </div>
-
         <div id="searchContainer" class="searchContainer">
             <button id="closeSearchContainerButton"><i class="fa-solid fa-xmark"></i></button>
             <input type="text" placeholder="Enter Your Text Here...">
             <button id="searchButton"><i class="fa-solid fa-magnifying-glass"></i></button>
         </div>
-
         <div id="navbarContainer" class="navbarContainer">
-            <button id="openMenuContainerButton"><i class="fa-solid fa-bars"></i></button>
+            <button id="openMenuContainerButton" class="navbarContainerButton"><i class="fa-solid fa-bars"></i></button>
             <h1>MoviesHUB</h1>
-            <button id="openSearchContainerButton"><i class="fa-solid fa-magnifying-glass"></i></button>
+            <button id="openSearchContainerButton" class="navbarContainerButton"><i class="fa-solid fa-magnifying-glass"></i></button>
         </div>
         <div class="bannerContainer">
             <h1>Get Trending, Upcoming and Popular Movies and series</h1>
         </div>
-        <div class="box">
-            <div class="trending-section">
-            </div>
+        <div class="sectionContainer">
+            <h2>Trending Now</h2>
+            <div id="trendingSectionContainer" class="cardSliderContainer"></div>
         </div>
         <div class="sectionContainer">
-            <div class="section">
-                <h2>Trending Now</h2>
-                <div class="slider" id="container"></div>
-            </div>
+            <h2>Popular Now</h2>
+            <div id="popularSectionContainer" class="cardSliderContainer"></div>
         </div>
-        <div class="section-cont">
-            <div class="section">
-                <h2>Popular Now</h2>
-                <div class="slider" id="popular-container"></div>
-            </div>
-        </div>
-        <div class="section-cont">
-            <div class="section">
-                <h2>Most Anticipated</h2>
-                <div class="slider" id="anticipated"></div>
-            </div>
+        <div class="sectionContainer">
+            <h2>Most Anticipated</h2>
+            <div id="anticipatedSectionContainer" class="cardSliderContainer"></div>
         </div>
     </div>
     <script src="JS/index.js"></script>
