--- a/index.html
+++ b/index.html
@@ -13,9 +13,18 @@
 </head>
 
 <body>
+    <div id="searchContainer">
+        <div id="searchBarContainer">
+            <input id="searchBar" type="text" placeholder="Enter title here...">
+            <p id="searchBarErrorMessage">Please enter title.</p>
+            <button id="clearButton" title="Clear"><i class="fa-solid fa-close"></i></button>
+        </div>
+        <div id="searchResultContainer"></div>
+        <button id="searchContainerCloseButton" title="Close"><i class="fa-solid fa-arrow-up"></i></button>
+    </div>
     <div id="mainContainer">
         <div id="navbarContainer">
-            <a href=""><img src="Images/favicon.png" height="60" alt=""></a>
+            <a href="index.html"><img src="Images/favicon.png" height="60" alt="CineHUB Logo"></a>
             <ul>
                 <li id="navbarMenuContainerButton"><i class="fa-solid fa-bars"></i>
                     <div id="navbarMenuContainer">
@@ -27,13 +36,13 @@
                         </ul>
                     </div>
                 </li>
-                <li><i class="fa-solid fa-magnifying-glass"></i></li>
+                <li id="navbarMenuContainerSearchButton"><i class="fa-solid fa-magnifying-glass"></i></li>
             </ul>
         </div>
         <div id="bannerContainer">
             <div id="bannerContentContainer">
                 <div id="bannerLogoContainer">
-                    <img src="Images/favicon.png" height="150" alt="">
+                    <img src="Images/favicon.png" height="150" alt="CineHUB Logo">
                     <h1>Cine<span>HUB</span></h1>
                 </div>
                 <h2><span>Discover</span> what's hot and where to stream it. <span>Track</span> series and movies you
